# Diskprotektorat

./: README.md  pyproject.toml  requirements.txt
src/: index.py
src/diskprotektorat/: __main__.py  index.py
