[project]
name = "diskprotektorat"
version = "0.0.1"
authors = [
  { name="Miloš Červinka", email="cervinkamilos08@gmail.com" },
]
description = "diskprotektorat package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
diskprotektorat = "diskprotektorat.index:main"

[project.urls]
Homepage = "https://github.com/Chillosh/Diskprotektorat"
Issues = "https://github.com/Chillosh/Diskprotektorat/issues"


[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

